--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,11 @@
 body {
     margin: 0;
-    background-color: rgb(238, 218, 218);
+    background-color: rgb(221, 221, 221);
 }
 
 header{
-    background-color: rgb(185, 168, 147);
     padding-top: 20px;
+    background-image: url(../Img/banner.png);
 }
 
 #my-photo { 
@@ -16,14 +16,14 @@ header{
 }
 
 h1{
-    background-color: rgb(167, 144, 116);
+    background-color: rgb(187, 187, 187);
     text-align: center;
 }
 
 h3{
     text-decoration: underline;
     text-transform: uppercase;
-    background-color: rgb(185, 168, 147);
+    background-color: rgb(212, 212, 212);
 }
 
 ul{
@@ -47,7 +47,7 @@ dt{
 }
 
 footer{
-    background-color: rgb(167, 144, 116);
+    background-color: rgb(187, 187, 187);
     text-align: center;
     height: 40px;
     margin-top: 20px;
