--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,8 @@ body {
 header{
     padding-top: 20px;
     background-image: url(../Img/banner.png);
+    position: sticky;
+    top: -30.5%;
 }
 
 #my-photo { 
@@ -15,6 +17,7 @@ header{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: -1px 1px 20px 9px #726262;
 }
 
 h1{
@@ -32,16 +35,21 @@ h6{
     margin-top: 0%;
     color:rgb(114, 98, 98);
     font-weight: 900;
+    border-bottom-style: solid;
+    border-color: rgb(250, 250, 255); /*ghostwhite*/
 }
 
 /*Elimina el subrayado del link*/
-header a:link, a:active, a:hover{
+h6 > a:link, a:active, a:hover, a:visited{
     text-decoration: none;
+    color: inherit;
+}
+
+h6 > a:hover{
+    color:black;
 }
 
 h3{
-    text-decoration: underline;
-    text-transform: uppercase;
     background-color: rgb(201, 187, 187);
     font-family: 'Asul', sans-serif;
     font-weight: bold;
@@ -68,11 +76,25 @@ dt{
     margin-left: 8px;
 }
 
+img.gato-miau {
+    height: 90px;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: 20px;
+    margin-bottom: -63px;
+}
+
+img.gato-miau:hover{
+    transform: scale(1.1);
+}
+
 footer{
     background-color: rgb(114, 98, 98);
     text-align: center;
     height: 40px;
     margin-top: 20px;
+    color: rgb(233, 233, 233);
     }
 
 footer div{
